--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-carousel": "^0.18.0",
+    "vue-i18n": "^9.9.0",
+    "vue-router": "^4.2.5",
+    "vue3-carousel": "^0.3.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
