--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "bootstrap": "^5.3.2",
     "vue": "^3.3.4",
     "vue-i18n": "^9.9.0",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-burger-menu": "^1.1.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
